v31 fix definition not closing on iphone

--- a/projects/normalize/src/app/tournament/definition/definition.component.less
+++ b/projects/normalize/src/app/tournament/definition/definition.component.less
@@ -1,5 +1,15 @@
 @import '../../../common.less';
 
+.overlay {
+    position: absolute;
+    display: block;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 4;
+}
+
 .wrapper {
     position: absolute;
     top: 0;
@@ -14,23 +24,29 @@
     z-index: 3;
     padding: 32px;
 
-    .img {
+    .def {
         flex: 0 0 50%;
         height: 100%;
+        width: 100%;
         display: flex;
         flex-flow: column;
         align-items: center;
         justify-content: flex-end;
         align-items: stretch;
-        img {
-            object-fit: contain;
-        }
-        pointer-events: none;
+        background-image: url('../../../assets/img/definition.svg');
+        background-size: contain;
+        background-position: bottom;
+        background-repeat: no-repeat;
     }
 
     .okay {
+        background-image: url('../../../assets/img/okay-button.svg');
+        background-size: contain;
+        background-position: center;
+        background-repeat: no-repeat;
         margin-top: auto;
         cursor: pointer;
-        pointer-events: none;
+        width: 56px;
+        height: 56px;
     }
 }
